--- a/_data/social.yml
+++ b/_data/social.yml
@@ -22,8 +22,8 @@ twitter:
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
-twitch: sirrandoo
-tiktok:
+twitch: Black3vil5tar
+tiktok: black3vil5tar
 
 # Share button options
 share:
