--- a/_data/language.yml
+++ b/_data/language.yml
@@ -3,48 +3,48 @@ items_tab: 'Items'
 events_tab: 'Events'
 traits_tab: 'Traits'
 animals_tab: 'Animals'
-weapons_tab: 'Weapons'
-pawn_kinds_tab: 'Pawn Kinds'
+weapons_tab: 'Waffen'
+pawn_kinds_tab: 'Bauernarten'
 
 # Table headers
 mod_name_header: Mod Name
 author_header: Author
 version_header: Version
 command_name_header: Command Name
-user_level_header: User Level
+user_level_header: Benutzerlevel
 description_header: Description
-cost_header: Cost
-category_header: Category
-karma_type_header: Karma Type
-add_cost_header: Add Cost
-remove_cost_header: Remove Cost
+cost_header: Kosten
+category_header: Kategorie
+karma_type_header: Karma-Typ
+add_cost_header: Kosten hinzufügen
+remove_cost_header: Kosten entfernen
 name_header: Name
 
 # Error messages
-no_commands: 'These are not the commands you are looking for.'
+no_commands: 'Dies sind nicht die Befehle, nach denen Sie suchen.
 
 # Redirect messages
-see_traits: 'See prices in the traits section'
-see_kinds: 'See prices in the pawn kinds section'
-see_items: 'See prices in the items section'
+see_traits: 'Preise finden Sie im Abschnitt „Merkmale“'
+see_kinds: 'Preise finden Sie im Abschnitt Pfandarten'
+see_items: 'Preise finden Sie im Artikelbereich'
 
 # Search texts
-search_items: 'Search for items...'
-search_traits: 'Search for traits...'
-search_pawn_kinds: 'Search for pawn kinds...'
-search_mods: 'Search for mods...'
-search_commands: 'Search for commands...'
-search_animals: 'Search for animals...'
-search_events: 'Search for events...'
-search_weapons: 'Search for weapons...'
+search_items: 'Nach Artikeln suchen...'
+search_traits: 'Suche nach Merkmalen ...'
+search_pawn_kinds: 'Suche nach Pfandarten...'
+search_mods: 'Suche nach Mods...'
+search_commands: 'Nach Befehlen suchen...'
+search_animals: 'Suche nach Tieren...'
+search_events: 'Nach Veranstaltungen suchen...'
+search_weapons: 'Suche nach Waffen...'
 
 # Metadata
-usage: 'Usage: %s'
-shortcut: 'This is a shortcut for %s'
+usage: 'Verwendung: %s'
+shortcut: 'Dies ist eine Abkürzung für %s'
 stats: 'Stats'
-conflicts_with: 'Conflicts with'
-from: 'From %s'
-weight: 'Weight'
+conflicts_with: 'Konflikte mit'
+from: 'Aus %s'
+weight: 'Gewicht'
 limit: 'Limit'
 karma: 'Karma'
-bypasses_limit: 'This trait may exceed the trait limit'
+bypasses_limit: 'Diese Eigenschaft kann das Eigenschaftslimit überschreiten'
